@@ -5,6 +5,7 @@
 	*** FROM HEAD ***
 	* generic/tclListObj.c (Tcl_ListObjIndex): added missing NULL return
 	when getting index from an empty list.
+	* generic/tclExecute.c: fix possible leak of expansion Tcl_Objs
 	
 
 2005-04-04  Miguel Sofer <msofer@users.sf.net>
